--- a/index.html
+++ b/index.html
@@ -42,13 +42,28 @@
 
     <div class="description">
       My notes on tweets related to Search in Social Media 2010 workshop
-    </div>
+  </div>
 
-    <h2>About SSM2010</h2>
-    <p>The Third Annual Workshop on Search in Social Media (SSM 2010) took place.</p>
 
-    <h2>Notes</h2>
-    <p>In FreeMind format.</p>
+
+<div class="section">
+<h2><a id="about-ssm2010" name="about-ssm2010">About SSM2010</a></h2>
+<p>The Third Annual Workshop on Search in Social Media (SSM 2010) took place.</p>
+</div>
+<div class="section">
+<h2><a id="notes" name="notes">Notes</a></h2>
+<dl class="docutils">
+<dt>In FreeMind format:</dt>
+<dd><ul class="first last simple">
+<li><a class="reference" href="ssm2010_first_panel.mm">First panel</a></li>
+<li><a class="reference" href="ssm2010_second_panel.mm">Second panel</a></li>
+</ul>
+</dd>
+</dl>
+</div>
+
+
+
 
     <div class="footer">
       this page is hosted on github : <a href="http://github.com/dudarev/ssm2010">dudarev/ssm2010</a>
