--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 
 <div class="section">
 <h2><a id="about-ssm2010" name="about-ssm2010">About SSM2010</a></h2>
-<p>The Third Annual Workshop on Search in Social Media (<a class="reference" href="http://ir.mathcs.emory.edu/SSM2010/">SSM 2010</a>) took place in New York on February 3rd 2010. It came to my attention because of tweets by Hilary Mason (<a class="reference" href="http://twitter.com/hmason">&#64;hmason</a>). The topics discussed are of great interest to me nowadays (informal proceedings by all the speakers are <a class="reference" href="http://ir.mathcs.emory.edu/SSM2010/proceedings.html">available in PDF format</a>).</p>
+<p>The Third Annual Workshop on Search in Social Media (<a class="reference" href="http://ir.mathcs.emory.edu/SSM2010/">SSM 2010</a>) took place in New York on February 3rd 2010. It came to my attention because of tweets by Hilary Mason (<a class="reference" href="http://twitter.com/hmason">&#64;hmason</a>). The topics discussed are of great interest to me nowadays. Informal proceedings by all the speakers are <a class="reference" href="http://ir.mathcs.emory.edu/SSM2010/proceedings.html">available in PDF format</a>.</p>
 </div>
 <div class="section">
 <h2><a id="notes" name="notes">Notes</a></h2>
 <p>Thanks to the tweets from the audience (especially Gene Golovchinsky <a class="reference" href="http://twitter.com/HCIR_GeneG">&#64; HCIR_GeneG</a>) it was possible to follow discussions during the panels. Ian Soboroff <a class="reference" href="http://twitter.com/ian_soboroff">&#64;ian_soboroff</a> initiated archiving of tweets hashtaged with #ssm2010 at <a class="reference" href="http://twapperkeeper.com/ssm2010/">http://twapperkeeper.com/ssm2010/</a></p>
 <dl class="docutils">
-<dt>It was fun to follow the discussions during the meeting with Twitter search. To somewhat systemitize thoughts I used <a class="reference" href="http://en.wikipedia.org/wiki/Mind_map">mind mapping</a> approach with <a class="reference" href="http://freemind.sourceforge.net/">FreeMind</a> software. Below are the files for the first and the second panels exported to HTML and in native FreeMind format:</dt>
+<dt>It was fun to follow the discussions during the meeting with Twitter search. To somewhat systematize thoughts I used <a class="reference" href="http://en.wikipedia.org/wiki/Mind_map">mind mapping</a> approach with <a class="reference" href="http://freemind.sourceforge.net/">FreeMind</a> software. Below are the files for the first and the second panels exported to HTML and in native FreeMind format:</dt>
 <dd><ul class="first last simple">
 <li>First panel (Yahoo!, Microsoft, Google representatives) [<a class="reference" href="ssm2010_first_panel.html">html</a>, <a class="reference" href="ssm2010_first_panel.mm">mm</a>]</li>
 <li>Second panel (representatives from Myspace, Bit.ly, LinkedIn) [<a class="reference" href="ssm2010_second_panel.html">html</a>, <a class="reference" href="ssm2010_second_panel.mm">mm</a>]</li>
